# ExampleProject

./: Cargo.toml  README.md  clippy.toml  rust-toolchain.toml  rustfmt.toml
.cargo-husky/hooks/: pre-commit
.claude/agents/: rust-complexity-docs-reviewer.md  rust-design-architect.md  rust-dry-reviewer.md  rust-test-coverage-reviewer.md
.claude/skills/check-rs/: SKILL.md
.github/workflows/: ci.yml
maps/: blocked.txt  detour.txt  rooms.txt  scatter.txt  serpentine.txt
src/: cli.rs  cost.rs  examples.rs  grid.rs  heuristic.rs  lib.rs  main.rs  mapgen.rs  render.rs  search.rs
