[package]
name = "example_project"
version = "0.1.0"
edition = "2024"

[dependencies]

[dev-dependencies]
# Installs .cargo-husky/hooks/* into .git/hooks on first `cargo test`.
cargo-husky = { version = "1", default-features = false, features = ["user-hooks"] }

[lints.rust]
missing_docs = "warn"                     # every public item must be documented

[lints.clippy]
# --- complexity & function length ---
too_many_lines = "warn"                   # pedantic; threshold set in clippy.toml (~20)
cognitive_complexity = "warn"             # nursery; threshold set in clippy.toml
# --- documentation completeness ---
missing_docs_in_private_items = "warn"    # document private fns/items too
missing_errors_doc = "warn"               # document Result-returning fns
missing_panics_doc = "warn"               # document any documented panics
# --- no panics / no implicit aborts ---
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
todo = "warn"
unimplemented = "warn"
unreachable = "warn"
indexing_slicing = "warn"                 # slice[i] can panic; prefer .get()
